# distnet-android

./: .gitignore  .gitmodules  README.md  build-libsodium.sh  build.gradle
app/: CMakeLists.txt  build.gradle
app/src/androidTest/java/com/distnet/gstark31897/distnet/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/cpp/: native-lib.cpp
app/src/main/java/com/distnet/gstark31897/distnet/: AppDatabase.java  Contact.java  ContactDao.java  Interface.java  InterfaceAdapter.java  InterfaceDao.java  MainActivity.java  Message.java  MessageAdapter.java  MessageDao.java  NewContactActivity.java  NodeService.java  Peer.java  PeerAdapter.java  PeerDao.java  SettingsActivity.java  ShareContactActivity.java  WelcomeActivity.java
app/src/main/res/drawable/: ic_chat_bubble.xml  ic_launcher_foreground.xml  ic_launcher_round.xml
app/src/main/res/layout/: activity_new_contatct.xml  activity_settings.xml  activity_share_contatct.xml  activity_welcome.xml  app_bar_main.xml  content_main.xml  inter.xml  message.xml  nav_header_main.xml  peer.xml
app/src/main/res/menu/: activity_main_drawer.xml  menu_main.xml
app/src/main/res/values/: colors.xml  strings.xml
app/src/test/java/com/distnet/gstark31897/distnet/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
